force-app/main/default/objects/Sales_Report__c/Sales_Report__c.object-meta.xml
<CustomObject>
    <label>Sales Report</label>
    <nameField>
        <label>Sales Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>