force-app/main/default/objects/Sales_Report__c/fields/Apr__c.field-meta.xml
<CustomField>
    <fullName>Apr__c</fullName>
    <label>Apr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>