force-app/main/default/objects/Sales_Report__c/fields/Aug__c.field-meta.xml
<CustomField>
    <fullName>Aug__c</fullName>
    <label>Aug</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>