force-app/main/default/objects/Sales_Report__c/fields/Date_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Date_Scheduled__c</fullName>
    <label>Date Scheduled</label>
    <type>Date</type>
</CustomField>