force-app/main/default/objects/Sales_Report__c/fields/Dec__c.field-meta.xml
<CustomField>
    <fullName>Dec__c</fullName>
    <label>Dec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>