force-app/main/default/objects/Sales_Report__c/fields/DO_Code__c.field-meta.xml
<CustomField>
    <fullName>DO_Code__c</fullName>
    <label>DO Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>