force-app/main/default/objects/Sales_Report__c/fields/Feb__c.field-meta.xml
<CustomField>
    <fullName>Feb__c</fullName>
    <label>Feb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>