force-app/main/default/objects/Sales_Report__c/fields/Jan__c.field-meta.xml
<CustomField>
    <fullName>Jan__c</fullName>
    <label>Jan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>