force-app/main/default/objects/Sales_Report__c/fields/JodID__c.field-meta.xml
<CustomField>
    <fullName>JodID__c</fullName>
    <label>JodID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>