force-app/main/default/objects/Sales_Report__c/fields/Jul__c.field-meta.xml
<CustomField>
    <fullName>Jul__c</fullName>
    <label>Jul</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>