force-app/main/default/objects/Sales_Report__c/fields/Jun__c.field-meta.xml
<CustomField>
    <fullName>Jun__c</fullName>
    <label>Jun</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>