force-app/main/default/objects/Sales_Report__c/fields/Mar__c.field-meta.xml
<CustomField>
    <fullName>Mar__c</fullName>
    <label>Mar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>