force-app/main/default/objects/Sales_Report__c/fields/Nov__c.field-meta.xml
<CustomField>
    <fullName>Nov__c</fullName>
    <label>Nov</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>