force-app/main/default/objects/Sales_Report__c/fields/Oct__c.field-meta.xml
<CustomField>
    <fullName>Oct__c</fullName>
    <label>Oct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>