force-app/main/default/objects/Sales_Report__c/fields/Sep__c.field-meta.xml
<CustomField>
    <fullName>Sep__c</fullName>
    <label>Sep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>