force-app/main/default/objects/Sales_Report__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Jan__c +  Feb__c +  Mar__c +  Apr__c +  May__c +  Jun__c +  Jul__c +  Aug__c +  Sep__c +  Oct__c +  Nov__c +  Dec__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>