force-app/main/default/objects/Sales_Report__c/recordTypes/Acc_Result.recordType-meta.xml
<RecordType>
    <fullName>Acc_Result</fullName>
    <active>true</active>
    <label>Acc Result</label>
</RecordType>