force-app/main/default/objects/Sales_Report__c/recordTypes/Acc_Target.recordType-meta.xml
<RecordType>
    <fullName>Acc_Target</fullName>
    <active>true</active>
    <label>Acc Target</label>
</RecordType>