force-app/main/default/objects/Sales_Report__c/recordTypes/Deposit.recordType-meta.xml
<RecordType>
    <fullName>Deposit</fullName>
    <active>true</active>
    <label>Deposit</label>
</RecordType>