force-app/main/default/objects/Sales_Report__c/recordTypes/Result.recordType-meta.xml
<RecordType>
    <fullName>Result</fullName>
    <active>true</active>
    <label>Result</label>
</RecordType>