force-app/main/default/objects/Sales_Report__c/recordTypes/Target.recordType-meta.xml
<RecordType>
    <fullName>Target</fullName>
    <active>true</active>
    <label>Target</label>
</RecordType>