force-app/main/default/objects/Sales_Report__c/recordTypes/Turn.recordType-meta.xml
<RecordType>
    <fullName>Turn</fullName>
    <active>true</active>
    <label>Turn</label>
</RecordType>